2007-09-09  Cosimo Cecchi  <cosimoc@svn.gnome.org>

	* lib/widgets/ephy-search-entry.c: (ephy_search_entry_get_type),
	(ephy_search_entry_timeout_cb), (ephy_search_entry_changed_cb),
	(ephy_search_entry_init), (ephy_search_entry_clear):
	* lib/widgets/ephy-search-entry.h:
	* src/bookmarks/ephy-bookmarks-editor.c: (search_entry_clear_cb),
	(build_search_box):

	Modifies the EphySearchEntry to inherit from EphyIconEntry instead of
	GtkEntry, to have icons on it. Adds a cleaner icon in the search
	entry of Bookmarks Editor. Fixes bug #463469.

2007-09-09  Cosimo Cecchi  <cosimoc@svn.gnome.org>

	* src/ephy-toolbar-editor.c: (ephy_toolbar_editor_constructor):

	Marks as translatable some toolbar editor strings and removes
	references to old Control Center gettext domain. Fixes bug #474429.
	Patch by Cyril Brulebois.

2007-09-09  Cosimo Cecchi  <cosimoc@svn.gnome.org>

	* lib/widgets/ephy-zoom-action.c: (connect_proxy):

	Fixes bad state syncing when adding zoom controls to the toolbar.
	Fixes bug #338005. Patch by Cyril Brulebois.

2007-09-09  Cosimo Cecchi  <cosimoc@svn.gnome.org> 

	* src/ephy-find-toolbar.c: (set_status_notfound_cb), (set_status),
	(ephy_find_toolbar_dispose):

	Make 'Not found' on find toolbar temporairly bold and fires
	gtk_widget_error_bell () when searching on a page and no results are
	found. Fixes bug #363004.

2007-09-08  Cosimo Cecchi  <cosimoc@svn.gnome.org>

	* embed/downloader-view.c: (downloader_view_finalize),
	(update_buttons_timeout_cb), (downloader_view_add_download):

	Fix runtime warnings when downloading small files, due to bad handling
	of g_timeout in DownloaderView. Fixes bug #473566.

2007-08-28  Christian Persch  <chpe@gnome.org>

	* data/mime-types-permissions.xml:

	More mime types.

2007-08-26  Diego Escalante Urrelo  <diegoe@gnome.org>

	* src/ephy-go-action.c:

	Fix the Go button signal handler so it doesn't stop the propagation of
	the event due to a bad signal handler. Fixes bug #469845. Patch by
	Cosimo Cecchi.
