@@ -1,3 +1,13 @@
+2007-09-09  Christian Persch  <chpe@gnome.org>
+
+	* configure.ac:
+	* embed/Makefile.am:
+	* embed/ephy-embed-factory.c: (ephy_embed_factory_new_object):
+	* m4/gecko.m4:
+	A m4/libxul.m4:
+	* src/Makefile.am: Integrate the "xulrunner" backend with configure.
+	Not building yet.
+
 2007-09-09  Cosimo Cecchi  <cosimoc@svn.gnome.org>
 
 	* lib/widgets/ephy-search-entry.c: (ephy_search_entry_get_type),
